# EIS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: EIS_sample.hpp  bicoloredGraph.hpp  graph.hpp  tabulation_hashing.hpp
include/basics/: parms.hpp  timer.hpp
src/: EIS_sample.cpp  bicoloredGraph.cpp  graph.cpp  main_3ES.cpp  main_EIS.cpp  main_EISm.cpp  main_NIS.cpp
